# cpp-sdl2-game-exemple

./: .gitignore  CMakeLists.txt  FindGL.cmake  FindGLEW.cmake  README.md
includes/: game.hpp
includes/core/: core.hpp
includes/event/: event.hpp
includes/object/: object.hpp
includes/utils/: asset.hpp
src/: main.cpp
src/core/: core.cpp
src/event/: event.cpp
src/object/: object.cpp
src/utils/: asset.cpp
tests/: test.cpp
